Fix Error backend policy issues